tests/ui/consts/recursive-zst-static.unleash.stderr
error[E0391]: cycle detected when const-evaluating + checking `FOO`
  --> $DIR/recursive-zst-static.rs:10:1
   |
LL | static FOO: () = FOO;
   | ^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `FOO`...
  --> $DIR/recursive-zst-static.rs:10:18
   |
LL | static FOO: () = FOO;
   |                  ^^^
   = note: ...which again requires const-evaluating + checking `FOO`, completing the cycle
note: cycle used when linting top-level module
  --> $DIR/recursive-zst-static.rs:10:1
   |
LL | / static FOO: () = FOO;
LL | |
LL | | fn main() {
LL | |     FOO
LL | | }
   | |_^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
